Fourth commit to user guide

--- a/downstream/modules/platform/con-controller-role-based-access-controls.adoc
+++ b/downstream/modules/platform/con-controller-role-based-access-controls.adoc
@@ -14,4 +14,4 @@ You must have permissions to all the resources used in a workflow, such as job t
 
 For more information, see link:{URLCentralAuth}/index#gw-managing-access[Managing access with role based access control].
 
-For more information on performing the tasks described in this section, see xref:controller-workflow-job-templates[Workflow job templates].
+For more information about performing the tasks described, see xref:controller-workflow-job-templates[Workflow job templates].
