--- a/downstream/modules/platform/proc-controller-add-groups-to-groups.adoc
+++ b/downstream/modules/platform/proc-controller-add-groups-to-groups.adoc
@@ -7,16 +7,16 @@ When you have added a group to a template, the Group *Details* page is displayed
 .Procedure
 
 . Select the *Related Groups* tab.
-. Click btn:[Existing group] to add a group that already exists in your configuration or btn:[New group] to create a new group.
+. Click btn:[Add existing group] to add a group that already exists in your configuration or btn:[Create group] to create a new group.
 . If creating a new group, enter the appropriate details into the required and optional fields:
 
 * *Name* (required):
 * Optional: *Description*: Enter a description as appropriate.
-* *Variables*: Enter definitions and values to be applied to all hosts in this group.
+* Optional: *Variables*: Enter definitions and values to be applied to all hosts in this group.
 Enter variables using either JSON or YAML syntax.
 Use the radio button to toggle between the two.
-. Click btn:[Save].
-. The *Create Group* window closes and the newly created group is displayed as an entry in the list of groups associated with the group that it was
+. Click btn:[Create group].
+. The *Create group* window closes and the newly created group is displayed as an entry in the list of groups associated with the group that it was
 created for.
 //+
 //image:inventories-add-group-subgroup-added.png[Inventories add group subgroup]
