--- a/downstream/modules/platform/proc-controller-add-groups.adoc
+++ b/downstream/modules/platform/proc-controller-add-groups.adoc
@@ -29,7 +29,7 @@ All of these spawned groups can have hosts.
 . From the navigation panel, select {MenuInfrastructureInventories}.
 . Select the Inventory name you want to add groups to.
 . In the Inventory *Details* page, select the *Groups* tab.
-. Click btn:[Create group] to open the *Create new group* window.
+. Click btn:[Create group].
 //+
 //image:inventories-add-group-new.png[Inventories_manage_group_add]
 
@@ -37,8 +37,9 @@ All of these spawned groups can have hosts.
 
 * *Name*: Required
 * Optional: *Description*: Enter a description as appropriate.
-* *Variables*: Enter definitions and values to be applied to all hosts in this group.
+* Optional: *Variables*: Enter definitions and values to be applied to all hosts in this group.
 Enter variables by using either JSON or YAML syntax.
 Use the radio button to toggle between the two.
-. Click btn:[Save].
-. When you have added a group to a template, the Group *Details* page is displayed.
+. Click btn:[Create group].
+
+When you have added a group to a template, the Group *Details* page is displayed.
