--- a/downstream/modules/platform/proc-controller-add-hosts.adoc
+++ b/downstream/modules/platform/proc-controller-add-hosts.adoc
@@ -15,7 +15,7 @@ You can configure hosts for the inventory and for groups and groups within group
 
 * *Name* (required):
 * Optional: *Description*: Enter a description as appropriate.
-* *Variables*: Enter definitions and values to be applied to all hosts in this group, as in the following example:
+* Optional: *Variables*: Enter definitions and values to be applied to all hosts in this group, as in the following example:
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
@@ -29,7 +29,7 @@ You can configure hosts for the inventory and for groups and groups within group
 Enter variables by using either JSON or YAML syntax.
 Use the radio button to toggle between the two.
 . Click btn:[Create host].
-. The *Create Host* window closes and the newly created host is displayed in the list of hosts associated with the group that it was created for.
+. The *Create host* window closes and the newly created host is displayed in the list of hosts associated with the group that it was created for.
 +
 //image:inventories-add-group-host-added.png[Inventories add group host]
 +
