--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -21,7 +21,7 @@ The *Inventories* window displays a list of the inventories that are currently a
 * *Name*: Enter a name appropriate for this inventory.
 * Optional: *Description*: Enter an arbitrary description as appropriate.
 * *Organization*: Required. Choose among the available organizations.
-* Only applicable to Smart Inventories: *Smart Host Filter*: Populate the hosts for this inventory by using a search filter. 
+* Only applicable to Smart Inventories: *Smart host filter*: Populate the hosts for this inventory by using a search filter. 
 +
 _Example_ 
 +
@@ -30,12 +30,12 @@ name__icontains=RedHat.
 These options are based on the organization you chose.
 +
 Filters are similar to tags in that tags are used to filter certain hosts that contain those names.
-Therefore, to populate the *Smart Host Filter* field, specify a tag that contains the hosts you want, not the hosts themselves.
+Therefore, to populate the *Smart host filter* field, specify a tag that has the hosts you want, not the hosts themselves.
 +
 Filters are case-sensitive.
-* *Instance Groups*: Select the instance group or groups for this inventory to run on.
+* *Instance groups*: Select the instance group or groups for this inventory to run on.
 +
-You can select multiple instance groups and sort them in the order that you want them run.
+You can select many instance groups and sort them in the order that you want them run.
 +
 //image:select-instance-groups-modal.png[image]
 
@@ -59,7 +59,7 @@ Select the verbosity from:
 ** *More verbose* provides more detail than *Verbose*.
 ** *Debug* logging is exceedingly verbose and includes information about SSH operations that can be useful in certain support instances. Most users do not need to see debug mode output.
 //Not sure of this
-** *Connection Debug* enables you to run ssh in verbose mode, providing debugging information about the SSH connection progress.
+** *Connection Debug* enables you to run SSH in verbose mode, providing debugging information about the SSH connection progress.
 //Not sure of this. 
 ** *WinRM Debug* used for verbosity specific to windows remote management 
 +
