--- a/downstream/modules/platform/proc-scm-remote-archive.adoc
+++ b/downstream/modules/platform/proc-scm-remote-archive.adoc
@@ -9,20 +9,20 @@ containing all the requirements for that project in a single archive.
 . From the navigation panel, select {MenuAEProjects}.
 . Click the project name you want to use.
 . In the project *Details* tab, click btn:[Edit project].
-. Select *Remote Archive* from the *Source Control Type* menu.
+. Select *Remote Archive* from the *Source control type* menu.
 . Enter the appropriate details into the following fields:
 
-* *Source Control URL* - requires a URL to a remote archive, such as a _GitHub Release_ or a build artifact stored in _Artifactory_ and unpacks it into
+* *Source control URL* - requires a URL to a remote archive, such as a _GitHub Release_ or a build artifact stored in _Artifactory_ and unpacks it into
 the project path for use.
-* *Source Control Credential* - If authentication is required, select the appropriate source control credential.
+* *Source control credential* - If authentication is required, select the appropriate source control credential.
 . Optional: In the *Options* field, select the launch behavior, if applicable:
 
 * *Clean* - Removes any local modifications before performing an update.
 * *Delete* - Deletes the local repository in its entirety before performing an update. 
 Depending on the size of the repository this can significantly increase the amount of time required to complete an
 update.
-* *Update Revision on Launch* - Not recommended. This option updates the revision of the project to the current revision in the remote source control, and caches the roles directory from xref:ref-projects-galaxy-support[{Galaxy} support] or xref:ref-projects-collections-support[Collections support].
-* *Allow Branch Override* - Not recommended. This option enables a job template that uses this project to launch with a specified SCM branch or revision other than that of the project's.
+* *Update revision on launch* - Not recommended. This option updates the revision of the project to the current revision in the remote source control, and caches the roles directory from xref:ref-projects-galaxy-support[{Galaxy} support] or xref:ref-projects-collections-support[Collections support].
+* *Allow branch override* - Not recommended. This option enables a job template that uses this project to launch with a specified SCM branch or revision other than that of the project's.
 +
 //image:projects-create-scm-rm-archive.png[Remote archived project]
 +
