--- a/downstream/modules/platform/ref-projects-collections-support.adoc
+++ b/downstream/modules/platform/ref-projects-collections-support.adoc
@@ -13,7 +13,7 @@ toggle button to *Off*.
 
 Roles and collections are locally cached for performance reasons, and you select *Update Revision on Launch* in the project *Options* to ensure this:
 
-image:projects-scm-update-options-update-on-launch-checked.png[update-on-launch]
+//image:projects-scm-update-options-update-on-launch-checked.png[update-on-launch]
 
 [NOTE]
 ====
