--- a/downstream/assemblies/platform/assembly-controller-inventories.adoc
+++ b/downstream/assemblies/platform/assembly-controller-inventories.adoc
@@ -29,13 +29,13 @@ By using an inventory file, Ansible can manage a large number of hosts with a si
 Inventories also help you use Ansible more efficiently by reducing the number of command line options you have to specify.
 Inventories are divided into groups and these groups contain the hosts.
 
-Groups may be sourced manually, by entering host names into {ControllerName}, or from one of its supported cloud providers.
+Groups can be sourced manually, by entering host names into {ControllerName}, or from one of its supported cloud providers.
 
 [NOTE]
 ====
 If you have a custom dynamic inventory script, or a cloud provider that is not yet supported natively in {ControllerName}, you can also import that into {ControllerName}.
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-inventory-file-importing[Inventory file importing] in _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/index#assembly-inventory-file-importing[Inventory file importing] in _{ControllerAG}_.
 ====
 
 From the navigation panel, select {MenuInfrastructureInventories}.
