--- a/downstream/modules/platform/proc-controller-adding-a-project.adoc
+++ b/downstream/modules/platform/proc-controller-adding-a-project.adoc
@@ -15,12 +15,12 @@ You can create a logical collection of playbooks, called projects in {Controller
 * *Name* (required)
 * Optional: *Description*
 * *Organization* (required): A project must have at least one organization. Select one organization now to create the project. When the project is created you can add additional organizations.
-* Optional: *Execution Environment*: Enter the name of the {ExecEnvShort} or search from a list of existing ones to run this project.
+* Optional: *Execution environment*: Enter the name of the {ExecEnvShort} or search from a list of existing ones to run this project.
 For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/upgrading-to-ees[Migrating to automation execution environments] in the _Red Hat Ansible Automation Platform Upgrade and Migration Guide_.
-* *Source Control Type* (required): Select an SCM type associated with this project from the menu.
+* *Source control type* (required): Select an SCM type associated with this project from the menu.
 Options in the following sections become available depending on the type chosen.
 For more information, see xref:proc-projects-manage-playbooks-manually[Managing playbooks manually] or xref:ref-projects-manage-playbooks-with-source-control[Managing playbooks using source control].
-* Optional: *Content Signature Validation Credential*: Use this field to enable content verification.
+* Optional: *Content signature validation credential*: Use this field to enable content verification.
 Specify the GPG key to use for validating content signature during project synchronization.
 If the content has been tampered with, the job will not run.
 For more information, see xref:assembly-controller-project-signing[Project signing and verification].
