--- a/downstream/modules/platform/proc-controller-sourced-from-project.adoc
+++ b/downstream/modules/platform/proc-controller-sourced-from-project.adoc
@@ -10,32 +10,32 @@ Use the following procedure to configure a project-sourced inventory:
 .Procedure
 . From the navigation panel, select {MenuInfrastructureInventories}.
 . Select the inventory name you want a source to and click the *Sources* tab.
-. Click btn:[Add source].
-. In the *Add new source* page, select *Sourced from a Project* from the *Source* list.
+. Click btn:[Create source].
+. In the *Create source* page, select *Sourced from a Project* from the *Source* list.
 . Enter the following details in the additional fields:
 
-* Optional: *Source Control Branch/Tag/Commit*: Enter the SCM branch, tags, commit hashes, arbitrary refs, or revision number (if applicable) from the source control (Git or Subversion) to checkout.
+* Optional: *Source control branch/tag/commit*: Enter the SCM branch, tags, commit hashes, arbitrary refs, or revision number (if applicable) from the source control (Git or Subversion) to checkout.
 +
-This field only displays if the sourced project has the *Allow Branch Override* option checked. For further information, see xref:proc-scm-git-subversion[SCM Types - Git and Subversion].
+This field only displays if the sourced project has the *Allow branch override* option checked. For further information, see xref:proc-scm-git-subversion[SCM Types - Git and Subversion].
 +
 image:projects-create-scm-project-branch-override-checked.png[Allow branch override]
 +
-Some commit hashes and refs might not be available unless you also provide a custom refspec in the next field.
+Some commit hashes and refs might not be available unless you also give a custom refspec in the next field.
 If left blank, the default is HEAD which is the last checked out Branch/Tag/Commit for this project.
 * Optional: *Credential*: Specify the credential to use for this source.
 * *Project* (required): Pre-populates with a default project, otherwise, specify the project this inventory is using as its source. Click the
 image:search.png[Search,15,15] icon to choose from a list of projects.
 If the list is extensive, use the search to narrow the options.
-* *Inventory File* (required): Select an inventory file associated with the sourced project.
+* *Inventory file* (required): Select an inventory file associated with the sourced project.
 If not already populated, you can type it into the text field within the menu to filter extraneous file types.
 In addition to a flat file inventory, you can point to a directory or an inventory script.
 +
 image:inventories-create-source-sourced-from-project-filter.png[image]
 
 . Optional: You can specify the verbosity, host filter, enabled variable/value, and update options as described in xref:proc-controller-add-source[Adding a source].
-. Optional: To pass to the custom inventory script, you can set environment variables in the *Source Variables* field.
+. Optional: To pass to the custom inventory script, you can set environment variables in the *Source variables* field.
 You can also place inventory scripts in source control and then run it from a project.
-For more information, see link:{BaseURL}red_hat_ansible_automation_platform/2.4/html-single/automation_controller_administration_guide/index#assembly-inventory-file-importing[Inventory File Importing] in _{ControllerAG}_.
+For more information, see link:{BaseURL}red_hat_ansible_automation_platform/2.4/html-single/configuring_automation_execution/index#assembly-inventory-file-importing[Inventory File Importing] in _{ControllerAG}_.
 //+
 //image:inventories-create-source-sourced-from-project-example.png[Inventories - create source - sourced from project example]
 
