--- a/downstream/modules/platform/proc-scm-insights.adoc
+++ b/downstream/modules/platform/proc-scm-insights.adoc
@@ -7,14 +7,14 @@
 . Click the project name you want to use.
 . In the project *Details* tab, click btn:[Edit project].
 . Select *Red Hat Insights* from the *Source Control Type* menu.
-. In the *Credential* field, select the appropriate credential for use with Insights, as Red Hat Insights requires a credential for authentication. 
+. In the *Insights credential* field, select the appropriate credential for use with Insights, as Red Hat Insights requires a credential for authentication. 
 . Optional: In the *Options* field, select the launch behavior, if applicable:
 
 * *Clean* - Removes any local modifications before performing an update.
 * *Delete* - Deletes the local repository in its entirety before performing an update. 
 Depending on the size of the repository this can significantly increase the amount of time required to complete an
 update.
-* *Update Revision on Launch* - Updates the revision of the project to the current revision in the remote source control, and caches the
+* *Update revision on launch* - Updates the revision of the project to the current revision in the remote source control, and caches the
 roles directory from xref:ref-projects-galaxy-support[{Galaxy} support] or xref:ref-projects-collections-support[Collections support]. 
 {ControllerNameStart} ensures that the local revision matches, and that the roles and collections are up-to-date.
 If jobs are spawned faster than the project can synchronize, selecting this enables you to configure a Cache Timeout to
