--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -2,15 +2,15 @@
 
 = General variables
 
-[cols="50%,50%",options="header"]
+[cols="50%,50%,50%",options="header"]
 |====
-| *Variable* | *Description*
-| *`enable_insights_collection`* | The default install registers the node to the {InsightsName} Service if the node is registered with Subscription Manager. 
+| *Variable* | *Container* | *Description*
+| *`enable_insights_collection`* | | The default install registers the node to the {InsightsName} for the {PlatformName} Service if the node is registered with Subscription Manager. 
 
 Set to `False` to disable.
 
 Default = `true`
-|*`nginx_tls_protocols`* | Defines support for `ssl_protocols` in Nginx.
+|*`nginx_tls_protocols`* | | Defines support for `ssl_protocols` in Nginx.
 
 Values available `TLSv1`, `TLSv1.1`, `TLSv1.2, `TLSv1.3`.
 
@@ -21,12 +21,12 @@ The TLSv1.3 parameter only works when OpenSSL 1.1.1 or higher is used.
 If `nginx_tls-protocols = ['TLSv1.3']` only TLSv1.3 is enabled. To set more than one protocol use `nginx_tls_protocols = ['TLSv1.2', 'TLSv.1.3']`.
 
 Default = `TLSv1.2`.
-| *`nginx_user_http_config`* | List of nginx configurations for `/etc/nginx/nginx.conf` under the http section. 
+| *`nginx_user_http_config`* | | List of nginx configurations for `/etc/nginx/nginx.conf` under the http section. 
 
 Each element in the list is provided into `http nginx config` as a separate line. 
 
 Default = empty list
-| *`registry_password`* | `registry_password` is only required if a non-bundle installer is used.
+| *`registry_password`* |`registry_password` |`registry_password` is only required if a non-bundle installer is used.
 
 Password credential for access to `registry_url`.
 
@@ -35,24 +35,56 @@ Enter your Red Hat Registry Service Account credentials in `registry_username` a
 When `registry_url` is `registry.redhat.io`, username and password are required if not using a bundle installer.
 
 For more information, see xref:proc-set-registry-username-password[Setting registry_username and registry_password].
-| *`registry_url`* | Default = `registry.redhat.io`.
-| *`registry_username`* | `registry_username` is only required if a non-bundle installer is used.
+| *`registry_url`* |`registry_url` | URL for the registry source. 
+
+Default = `registry.redhat.io`.
+| *`registry_username`* |`registry_username` |`registry_username` is only required if a non-bundle installer is used.
 
 User credential for access to `registry_url`.
 
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 
 For more information, see xref:proc-set-registry-username-password[Setting registry_username and registry_password].
-| *`routable_hostname`* | `routable hostname` is used if the machine running the installer can only route to the target host through a specific URL, for example, if you use shortnames in your inventory, but the node running the installer can only resolve that host using FQDN.
+| *`routable_hostname`* |`routable_hostname` | `routable hostname` is used if the machine running the installer can only route to the target host through a specific URL. For example, if you use shortnames in your inventory, but the node running the installer can only resolve that host using FQDN.
 
 If `routable_hostname` is not set, it should default to `ansible_host`. If you do not set `ansible_host`, `inventory_hostname` is used as a last resort.
 
 This variable is used as a host variable for particular hosts and not under the `[all:vars]` section. 
+
 For further information, see link:https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html#assigning-a-variable-to-one-machine-host-variables[Assigning a variable to one machine: host variables].
+| |`bundle_dir` |The epath to the bundle directory.
+Default = false
+| |`bundle_install` |Use offline installation. Set to true to enable offline installation. 
 
-|*`nginx_tls_protocols`* | Defines support for `ssl_protocols` in Nginx.
+Default = false
 
-Default = `TLSv1.2`.
+| |`cat_tls_cert` |TLS CA certificate.
+| |`ca_tls_key` | TLS CA key.
+| |`ca_tls_remote` |TLS CA remote files.
+
+Default = false
+| |`container_compress` |Container compression software.
+
+Default = gzip
+| |`container_keep_images` |Keep container images.
+
+Default = false
+| |`container_pull_images` |Pull newer container images.
+
+Default = true
+| |`custom_ca_cert` |Custom TLS CA certificate.
+| |`registry_auth` |Use registry authentication.
+
+Default = true
+| |`registery_ns_aap` |{PlatformNameShort} registry namespace.
+
+Default = ansible-automation-platform-25
+| |`registry_ns_rhel` |RHEL registry namespace.
+
+Default = rhel8
+| |`registry_tls_verify` |Verify registry TLS.
+
+Default = true
 
 |====
 
