populating content for Getting started as automation dev

--- a/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
@@ -15,22 +15,19 @@ endif::[]
 
 As an automation developer, you can use {PlatformNameShort} to implement your organization's automation strategy. 
 {PlatformNameShort} can help you write, test, and share automation content, and download and use Red Hat certified collections. 
-This guide will walk you through the basic steps to get set up as an automation developer on {PlatformNameShort}. 
-To get started as an automation developer, learn how to: 
+This guide will walk you through the basic steps to get set up as an automation developer on {PlatformNameShort}, with information on how to:
 
 * Set up your development environment
-* Use playbooks and rulebooks
-* Create roles
-* Find existing automation content and publish your own custom content
-* Use execution environments and decision environments
-* Create a project
+* Create, publish, and use custom automation content
+* Build and use {ExecEnvName} and decision environments
 * Create and run rulebook activations for {EDAName}
+* Create and use job templates
 
-//Add Aine's devtools doc:
-//include::
+include::platform/con-gs-setting-up-dev-env.adoc[leveloffset=+1]
 include::platform/con-gs-create-automation-content.adoc[leveloffset=+1]
 include::platform/con-gs-define-events-rulebooks.adoc[leveloffset=+1]
 include::platform/con-gs-ansible-roles.adoc[leveloffset=+1]
+include::platform/proc-gs-creating-a-role.adoc[leveloffset=+1]
 include::platform/con-gs-learn-about-collections.adoc[leveloffset=+1]
 include::platform/proc-gs-publish-to-a-collection.adoc[leveloffset=+1]
 include::platform/proc-gs-upload-collection.adoc[leveloffset=+2]
