--- a/downstream/modules/platform/con-gs-define-events-rulebooks.adoc
+++ b/downstream/modules/platform/con-gs-define-events-rulebooks.adoc
@@ -4,11 +4,22 @@
 
 An Ansible rulebook is a collection of rulesets that references one or more sources, rules, and conditions.
 
-Rulebooks are to Event-Driven Ansible what playbooks are to {PlatformNameShort} as a whole. 
+Rulebooks are to {EDAName} what playbooks are to {PlatformNameShort} as a whole. 
 Like a playbook, a rulebook defines automation tasks for the platform, along with when they should be triggered. 
 
 == Rulebook actions
 
-Rulebooks use an "if-this-then-that” logic that tells {EDAName} what actions to activate when a rule is triggered.
+Rulebooks use an "if-this-then-that” logic that tells {EDAName} what actions to activate when a rule is triggered. {EDAName} listens to the controller event stream and, when an event triggers a rule, activates an automation action in response. 
 
+Rulebooks can trigger the following activations:
 
+* 'run_job_template'
+* 'run_playbook' (only supported with ansible-rulebook CLI)
+* 'debug'
+* 'print_event'
+* 'set_fact'
+* 'post_event'
+* 'retract_fact'
+* 'shutdown'
+
+To read more about rulebook activations, see link:https://ansible.readthedocs.io/projects/rulebook/en/latest/actions.html[Actions] in the Ansible Rulebook documentation.
