--- a/downstream/modules/platform/con-gs-learn-about-collections.adoc
+++ b/downstream/modules/platform/con-gs-learn-about-collections.adoc
@@ -1,16 +1,13 @@
 [id="con-gs-learn-about-collections_{context}"]
 
-= Learn about content collections 
+= About content collections 
 
-Ansible content collections are assemblages of automation content. 
+Ansible content collections are assemblages of automation content. There are two types of Ansible collections:
 
-You can find Ansible Certified Collections in {HubName}.
+* *{CertifiedName}*, which contain fully-supported roles and modules that are enterprise- and production-ready for use in your environments.
+* *{Valid} collections*, whcih provide you with a trusted, expert-guided approach for performing foundational operations and tasks in your product. 
 
-== Browse content
-
-If you are not using the bundle installer, you can use a Red Hat-supplied Ansible Playbook to install validated content. For further information, see Ansible validated content.
-
-You can update validated collections manually by downloading their updated packages in {HubName}.
+Both types of content collections can be found in {HubName} through the link:{Console}[Hybrid Cloud Console].
 
 == Downloading content 
 
@@ -19,8 +16,6 @@ After collections are finalized, you can import them to a location where they ca
 .Procedure
 
 . Log in to {PlatformName}.
-. From the navigation panel, select *Full Experience*. 
-The {HubName} UI is displayed.
 . From the navigation panel, select {MenuACCollections}. 
 The *Collections* page displays all collections across all repositories. 
 You can search for a specific collection.
