--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -6,6 +6,16 @@ The {EDAcontroller} is a single-node system capable of handling a variable numbe
 
 Use the following minimum requirements to run, by default, a maximum of 12 simultaneous activations:
 
+[cols="a,a",options="header"]
+|===
+h| Requirement | Required
+| *RAM* | 16 GB
+| *CPUs* | 4
+| *Local disk* a| 
+* Hard drive must be 40 GB minimum with at least 20 GB available under /var.
+* Storage volume must be rated for a minimum baseline of 1500 IOPS.
+* If the cluster has many large projects, consider doubling the GB in /var to avoid disk space errors.
+|===
 
 
 [IMPORTANT]
