AAP-22994B Updated EDA system requirements

--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -8,7 +8,7 @@ Use the following minimum requirements to run, by default, a maximum of 12 simul
 
 [cols="a,a",options="header"]
 |===
-h| Requirement | Required
+| Requirement | Required
 | *RAM* | 16 GB
 | *CPUs* | 4
 | *Local disk* a| 
