AAP-22994B Updated EDA system requirements

--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -6,7 +6,7 @@ The {EDAcontroller} is a single-node system capable of handling a variable numbe
 
 Use the following minimum requirements to run, by default, a maximum of 12 simultaneous activations:
 
-[cols="a,a",options="header"]
+[cols=2*,options="header"]
 |===
 | Requirement | Required
 | *RAM* | 16 GB
