--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -7,22 +7,27 @@ The {EDAcontroller} is a single-node system capable of handling a variable numbe
 Use the following minimum requirements to run, by default, a maximum of 12 simultaneous activations:
 
 
-//[cols=2*,options="header"]
-//|===
-//| Requirement | Required
-//| *RAM* | 16 GB
-//| *CPUs* | 4
-//| *Local disk* a| 
-//* Hard drive must be 40 GB minimum with at least 20 GB available under /var.
-//* Storage volume must be rated for a minimum baseline of 1500 IOPS.
-//* If the cluster has many large projects, consider doubling the GB in /var to avoid disk space errors.
-//|===
+[cols=2*,options="header"]
+|===
+| Requirement | Required
+| *RAM* | 16 GB
+| *CPUs* | 4
+| *Local disk* a| 
+* Hard drive must be 40 GB minimum with at least 20 GB available under /var.
+* Storage volume must be rated for a minimum baseline of 1500 IOPS.
+* If the cluster has many large projects, consider doubling the GB in /var to avoid disk space errors.
+|===
 
 
 [IMPORTANT]
 ====
-* If you are running {RHEL} 8 and want to set your memory limits, you must have cgroup v2 enabled before you install {EDAName}. For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for {RHEL} 8 requires cgroupv2].
+* If you are running {RHEL} 8 and want to set your memory limits, you must have cgroup v2 enabled before you install {EDAName}. 
+For specific instructions, see the Knowledge-Centered Support (KCS) article, link:https://access.redhat.com/solutions/7054905[Ansible Automation Platform Event-Driven Ansible controller for {RHEL} 8 requires cgroupv2].
 
-* When you activate an {EDAName} rulebook under standard conditions, it uses about 250 MB of memory. However, the actual memory consumption can vary significantly based on the complexity of your rules and the volume and size of the events processed. In scenarios where a large number of events are anticipated or the rulebook complexity is high, conduct a preliminary assessment of resource usage in a staging environment. This ensures that your maximum number of activations is based on the capacity of your resources. See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_installation_guide/index#ref-single-controller-hub-eda-with-managed-db[Single {ControllerName}, single {HubName}, and single {EDAcontroller} node with external (installer managed) database] for an example on setting {EDAController} maximum
+* When you activate an {EDAName} rulebook under standard conditions, it uses about 250 MB of memory. 
+However, the actual memory consumption can vary significantly based on the complexity of your rules and the volume and size of the events processed. 
+In scenarios where a large number of events are anticipated or the rulebook complexity is high, conduct a preliminary assessment of resource usage in a staging environment. 
+This ensures that your maximum number of activations is based on the capacity of your resources. 
+See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_installation_guide/index#ref-single-controller-hub-eda-with-managed-db[Single {ControllerName}, single {HubName}, and single {EDAcontroller} node with external (installer managed) database] for an example on setting {EDAController} maximum
 running activations. 
 ====
