--- a/downstream/assemblies/platform/assembly-appendix-inventory-file-vars.adoc
+++ b/downstream/assemblies/platform/assembly-appendix-inventory-file-vars.adoc
@@ -14,3 +14,6 @@ include::platform/ref-controller-variables.adoc[leveloffset=+1]
 include::platform/ref-eda-controller-variables.adoc[leveloffset=+1]
 include::platform/ref-gateway-variables.adoc[leveloffset=+1]
 include::platform/ref-ansible-inventory-variables.adoc[leveloffset=+1]
+include::platform/ref-database-inventory-variables.adoc[leveloffset=+1]
+include::platform/ref-images-inventory-variables.adoc[leveloffset=+1]
+include::platform/ref-receptor-inventory-variables.adoc[leveloffset=+1]
