AAP-22994B Update disk requirements for Event-Driven Ansible controller (#2000)
* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

* AAP-22994B Updated EDA system requirements

--- a/downstream/modules/platform/ref-eda-system-requirements.adoc
+++ b/downstream/modules/platform/ref-eda-system-requirements.adoc
@@ -6,6 +6,17 @@ The {EDAcontroller} is a single-node system capable of handling a variable numbe
 
 Use the following minimum requirements to run, by default, a maximum of 12 simultaneous activations:
 
+[cols=2*,options="header"]
+|===
+| Requirement | Required
+| *RAM* | 16 GB
+| *CPUs* | 4
+| *Local disk* a| 
+* Hard drive must be 40 GB minimum with at least 20 GB available under /var.
+* Storage volume must be rated for a minimum baseline of 1500 IOPS.
+* If the cluster has many large projects, consider doubling the GB in /var to avoid disk space errors.
+|===
+
 [IMPORTANT]
 ====
 * If you are running {RHEL} 8 and want to set your memory limits, you must have cgroup v2 enabled before you install {EDAName}. 
