AAP-29296-A updated links

--- a/downstream/modules/platform/ref-containerized-system-requirements.adoc
+++ b/downstream/modules/platform/ref-containerized-system-requirements.adoc
@@ -2,6 +2,6 @@
 
 // [id="ref-containerized-system-requirements_{context}"]
 
-= System requirements for containerized installation of {PlatformNameShort}
+= System requirements for containerized installation
 
 For system requirements for the containerized installation method of {PlatformNameShort}, see the link:{URLContainerizedInstall}/platform-system-requirements#system_requirements[System requirements] section of _{TitleContainerizedInstall}_.
