--- a/downstream/modules/platform/ref-OCP-system-requirements.adoc
+++ b/downstream/modules/platform/ref-OCP-system-requirements.adoc
@@ -2,6 +2,6 @@
 
 // [id="ref-OCP-system-requirements_{context}"]
 
-= System requirements for installing {PlatformName} on {OCPShort}
+= System requirements for installing on {OCPShort}
 
-For system requirements for installing {PlatformNameShort} on {OCPShort}, see the link:{URLTopologies}[Tested system configurations] section of the _{TitleTopologies}_ guide.
+For system requirements for installing {PlatformNameShort} on {OCPShort}, see the link:{URLTopologies}[Tested system configurations] section of _{TitleTopologies}_.
