AAP-29294 updated version numbers and disclaimer

--- a/downstream/modules/platform/con-declaring-variables.adoc
+++ b/downstream/modules/platform/con-declaring-variables.adoc
@@ -32,3 +32,5 @@ The YAML inventory plugin processes variable values consistently and correctly.
 If a parameter value in the Ansible inventory file contains special characters, such as #, { or }, you must double-escape the value (that is enclose the value in both single and double quotation marks). 
 
 For example, to use `mypasswordwith#hashsigns` as a value for the variable `pg_password`, declare it as `pg_password='"mypasswordwith#hashsigns"'` in the Ansible host inventory file.
+
+include::../aap-common/external-site-disclaimer.adoc[]
