AAP-29295-A updated table

--- a/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
+++ b/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
@@ -42,7 +42,7 @@ The following default destination ports and installer inventory listed are confi
 
 This exposes the mesh ingress receptor entry point for inbound connections.| `nginx_https_port`
 | 443 | TCP | HTTPS | Controller node | {OCPShort} |  Only required when using container groups to run jobs. | Host name of OpenShift API server
-| 443 | TCP | HTTPS | HA Proxy load balancer | Platform gateway |  This is the ingress above the gateway that's customer controlled and can load balance requests to multiple gateways. | 
+| 443 | TCP | HTTPS | HA Proxy load balancer | Platform gateway |  This is the ingress above the gateway that's customer controlled and can load balance requests to multiple gateways. | This port is customer managed outside of Ansible Automation Platform.
 | 443 | TCP | HTTPS | Platform gateway | {ControllerNameStart} |  | 
 | 443 | TCP | HTTPS | Platform gateway | {HubNameStart} |  | 
 | 443 | TCP | HTTPS | Platform gateway | {EDAName} |  | 
