AAP-29295-A updated diagram following peer review

--- a/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
+++ b/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
@@ -51,7 +51,7 @@ This exposes the mesh ingress receptor entry point for inbound connections.| `ng
 | 5432 | TCP | PostgreSQL | Controller node | PostgreSQL database | Open only if the internal database is used along with another component. Otherwise, this port should not be open. | `automationcontroller_pg_port`
 | 5432 | TCP | PostgreSQL | EDA node | PostgreSQL database | Open only if the internal database is used along with another component. Otherwise, this port should not be open. | `automationedacontroller_pg_port`
 | 5432 | TCP | PostgreSQL | {HubNameStart} | PostgreSQL database | Open only if the internal database is used along with another component. Otherwise, this port should not be open. | `automationhub_pg_port`
-| 5432 | TCP | PostgreSQL | Platform gateway | External database |  | `automationgateway_pg_port`
+| 5432 | TCP | PostgreSQL | Platform gateway | External database | Open only if the internal database is used along with another component. Otherwise, this port should not be open. | `automationgateway_pg_port`
 | 6379 | TCP | PostgreSQL | {EDAName} | Redis node |  | 
 | 6379 | TCP | PostgreSQL | Platform gateway | Redis node |  | 
 | 8443 | TCP | HTTPS | Platform gateway | Platform gateway | nginx | 
