--- a/stories/assembly-azure-install.adoc
+++ b/stories/assembly-azure-install.adoc
@@ -1,4 +1,4 @@
-ifdef::context[:parent-context: {context}]
+ifdef::context[:parent-context-of-assembly-azure-install: {context}]
 
 [id="azure-install"]
 = Installing {AAPonAzureName}
@@ -20,13 +20,25 @@ ifdef::context[:parent-context: {context}]
 * An account on the Red Hat Red Hat Customer Portal (link:https://access.redhat.com/[access.redhat.com]).
 * A specific subscription entitlement for {PlatformName}.
 
+// Prerequisites
 // Prerequisites for Azure tenancies (tenancy resource limits, use of Azure private features, etc.). Link to Infrastructure modules
 
 include::topics/proc-azure-resource-quotas.adoc[leveloffset=+2]
 include::topics/proc-azure-resource-providers.adoc[leveloffset=+2]
 
-include::topics/proc-azure-create-service-principal.adoc[leveloffset=+1]
+// Prerequisites - Network
+include::topics/con-azure-network.adoc[leveloffset=+2]
+include::topics/con-azure-vnet-cidr.adoc[leveloffset=+3]
+include::topics/con-azure-aks-cidr.adoc[leveloffset=+3]
 
+// Prerequisites - Service Principal
+include::topics/proc-azure-create-service-principal.adoc[leveloffset=+2]
+
+// KB articles
+include::topics/ref-azure-policy.adoc[leveloffset=+2]
+include::topics/proc-azure-entitling-subscription.adoc[leveloffset=+2]
+
+// Deployment
 include::topics/proc-azure-deploy-aap.adoc[leveloffset=+1]
 
 include::topics/proc-azure-locate-aap-marketplace.adoc[leveloffset=+2]
@@ -34,20 +46,5 @@ include::topics/proc-azure-provisioning-aap.adoc[leveloffset=+2]
 include::topics/proc-azure-monitor-deployment-engine.adoc[leveloffset=+2]
 include::topics/proc-azure-cancel-deployment.adoc[leveloffset=+2]
 
-include::topics/proc-azure-accessing-aap.adoc[leveloffset=+1]
-include::topics/proc-azure-license-association.adoc[leveloffset=+2]
-include::topics/proc-azure-configure-ad-sso.adoc[leveloffset=+2]
-// include::topics/[leveloffset=+2]
-
-////
-[role="_additional-resources"]
-.Additional resources
-
-* A bulleted list of links to other material closely related to the contents of the concept module.
-* Currently, modules cannot include xrefs, so you cannot include links to other content in your collection. If you need to link to another assembly, add the xref to the assembly that includes this module.
-* For more details on writing concept modules, see the link:https://github.com/redhat-documentation/modular-docs#modular-documentation-reference-guide[Modular Documentation Reference Guide].
-* Use a consistent system for file names, IDs, and titles. For tips, see _Anchor Names and File Names_ in link:https://github.com/redhat-documentation/modular-docs#modular-documentation-reference-guide[Modular Documentation Reference Guide].
-////
-
-ifdef::parent-context[:context: {parent-context}]
-ifndef::parent-context[:!context:]
+ifdef::parent-context-of-assembly-azure-install[:context: {parent-context-of-assembly-azure-install}]
+ifndef::parent-context-of-assembly-azure-install[:!context:]
