18813 - reconciling token auth content with late UI changes

--- a/downstream/modules/platform/ref-controller-applications-getting-started.adoc
+++ b/downstream/modules/platform/ref-controller-applications-getting-started.adoc
@@ -6,6 +6,6 @@ You can access the *OAuth Applications* page from the navigation panel by select
 
 //image:apps-list-view-examples.png[Applications- with example apps]
 
-If no applications exist, you can create one by clicking btn:[Create application].
+If no applications exist, you can create one by clicking btn:[Create OAuth application].
 
 //image:apps-list-view-empty.png[Add applications]
