--- a/downstream/modules/platform/proc-controller-create-application.adoc
+++ b/downstream/modules/platform/proc-controller-create-application.adoc
@@ -2,7 +2,7 @@
 
 = Creating a new application
 
-When integrating an external web application with {ControllerName} the web application might need to create OAuth2 Tokens on behalf of users of the web application.
+When integrating an external web application with {ControllerName} the web application might need to create OAuth2 tokens on behalf of users of the web application.
 
 Creating an application with the Authorization Code grant type is the preferred way to do this for the following reasons:
 
@@ -12,7 +12,7 @@ For example, revoking all tokens associated with that application.
 
 .Procedure
 . From the navigation panel, select {MenuAMAdminOauthApps}.
-. Click btn:[Create application].
+. Click btn:[Create OAuth application].
 The *Create Application* page opens.
 +
 //image:apps-create-new.png[Create application]
