--- a/downstream/modules/platform/ref-gw-application-functions.adoc
+++ b/downstream/modules/platform/ref-gw-application-functions.adoc
@@ -10,8 +10,8 @@ Authorization code:: This grant type should be used when access tokens must be i
 
 [NOTE]
 ====
-You can only use the authorization code type to acquire an access token when using an application. When integrating an external web application with {PlatformNameShort}, that web application might need to create OAuth2 Tokens on behalf of users in that other web application. Creating an application in the platform with the authorization code grant type is the preferred way to do this because:
+You can only use the authorization code type to acquire an access token when using an application. When integrating an external web application with {PlatformNameShort}, that web application might need to create OAuth2 tokens on behalf of users in that other web application. Creating an application in the platform with the authorization code grant type is the preferred way to do this because:
 
 * This allows an external application to obtain a token from {PlatformNameShort} for a user, using their credentials.
-* Compartmentalized tokens issued for a particular application enables those tokens to be easily managed. For example, revoking all tokens associated with that application without having to revoke all tokens in the system.
+* Compartmentalized tokens issued for a particular application enables those tokens to be easily managed. For example, revoking _all_ tokens associated with that application without having to revoke all tokens in the system.
 ====
